--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -32,7 +32,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/spesies"
+        android:id="@+id/species_labels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_name"
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/item_name"
         android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@id/spesies"
+        android:layout_toRightOf="@id/species_labels"
         android:text="Human"
         android:textSize="18sp" />
 
@@ -55,7 +55,7 @@
         android:id="@+id/item_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/spesies"
+        android:layout_below="@id/species_labels"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@id/cv_img"
         android:text="Alive"
